# auto-reply

./: .gitignore
.claude/skills/run-app/: SKILL.md
frontend/: .env.local  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/client/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: RequestsTable.tsx  Topbar.tsx
frontend/lib/: api.ts  types.ts
server/: .env.example  pyproject.toml  seed_admin.py  split_a_number_inbox.py
server/app/: auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  serializers.py
server/app/routers/: auth.py  requests.py  users.py  ws.py
server/app/services/: archive.py  docx_export.py  excel.py  formats.py  matcher.py  parsers.py  response_formats.py  splitter.py  staging.py  watcher.py  ws_manager.py
