[project]
name = "auto-reply-server"
version = "0.1.0"
description = "Centralized request-processing server (FastAPI + watchdog)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pypdf>=4.2",
    "watchdog>=4.0",
    "psycopg[binary]>=3.1",
]

[tool.uv]
package = false
